--- a/Main.storyboard
+++ b/Main.storyboard
@@ -58,14 +58,59 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jOp-MW-gIY" customClass="KolodaView" customModule="Koloda">
                                 <rect key="frame" x="16" y="72" width="343" height="394"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bPc-hb-rSq" customClass="dropShadow" customModule="HiddenGem" customModuleProvider="target">
+                                <rect key="frame" x="53" y="505" width="268" height="71"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yr1-7X-pxP">
+                                        <rect key="frame" x="230" y="20" width="30" height="30"/>
+                                        <state key="normal" title="Like"/>
+                                        <connections>
+                                            <action selector="rightButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="9gO-jE-pfB"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBb-WD-Bso">
+                                        <rect key="frame" x="8" y="20" width="45" height="30"/>
+                                        <state key="normal" title="Dislike"/>
+                                        <connections>
+                                            <action selector="leftButtonTapped" destination="BYZ-38-t0r" eventType="touchUpInside" id="5rJ-Y8-fnd"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="UBb-WD-Bso" firstAttribute="leading" secondItem="bPc-hb-rSq" secondAttribute="leadingMargin" id="2LW-Io-2tv"/>
+                                    <constraint firstItem="Yr1-7X-pxP" firstAttribute="trailing" secondItem="bPc-hb-rSq" secondAttribute="trailingMargin" id="4mz-zA-QOl"/>
+                                    <constraint firstItem="UBb-WD-Bso" firstAttribute="baseline" secondItem="Yr1-7X-pxP" secondAttribute="baseline" id="Flj-qi-hgE"/>
+                                    <constraint firstItem="UBb-WD-Bso" firstAttribute="centerY" secondItem="bPc-hb-rSq" secondAttribute="centerY" id="dc6-QG-3CC"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="shadowColor">
+                                        <color key="value" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="shadowOffset">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="EdM-l4-AKB" firstAttribute="top" secondItem="bPc-hb-rSq" secondAttribute="bottom" constant="42" id="Fv8-n3-9ZJ"/>
+                            <constraint firstItem="bPc-hb-rSq" firstAttribute="centerX" secondItem="jOp-MW-gIY" secondAttribute="centerX" id="H2Z-gi-SYv"/>
                             <constraint firstItem="EdM-l4-AKB" firstAttribute="top" secondItem="jOp-MW-gIY" secondAttribute="bottom" constant="152" id="KVe-gd-TQe"/>
                             <constraint firstItem="jOp-MW-gIY" firstAttribute="trailing" secondItem="uCo-tL-KTS" secondAttribute="trailingMargin" id="TzG-gB-UFo"/>
                             <constraint firstItem="jOp-MW-gIY" firstAttribute="leading" secondItem="uCo-tL-KTS" secondAttribute="leadingMargin" id="XmD-sL-VFa"/>
+                            <constraint firstItem="bPc-hb-rSq" firstAttribute="top" secondItem="jOp-MW-gIY" secondAttribute="bottom" constant="39" id="aje-Zs-qrI"/>
+                            <constraint firstItem="bPc-hb-rSq" firstAttribute="leading" secondItem="uCo-tL-KTS" secondAttribute="leadingMargin" constant="37" id="lx7-5j-PwJ"/>
                             <constraint firstItem="jOp-MW-gIY" firstAttribute="top" secondItem="xp2-wT-iWO" secondAttribute="bottom" constant="8" symbolic="YES" id="udy-vG-y0J"/>
                         </constraints>
                     </view>
